Feat/avatar (#39)
feat: avatar enpoint

---------
