# src/Routers/userRouter.ts
@@ -1,16 +1,20 @@
 import express from 'express';
 import { userController } from '../Controller/userController.js';
 import wrapAsync from '../utils/wrapAsync.js';
-import { verifyToken } from '../Middlewares/auth.js';
+import { jwtAuthentication } from '../Middlewares/auth.js';
+import { upload } from '../Middlewares/multer.js';
 
 const router = express.Router();
 
 router.post('/signup', wrapAsync(userController.signUp));
 router.post('/signin', wrapAsync(userController.signIn));
 
-/*
-need middleware to check if user is authenticated
-*/
-router.get('/info', verifyToken, wrapAsync(userController.getUserInfo));
+router.get('/info', jwtAuthentication, wrapAsync(userController.getUserInfo));
+
+router.post(
+  '/avatar',
+  [jwtAuthentication, upload.single('avatar')],
+  wrapAsync(userController.uploadAvatar),
+);
 
 export default router;
